pdf2md/k8s/chunk-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chunk-worker
  labels:
    app.kubernetes.io/name: chunk-worker
spec:
  replicas: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: chunk-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chunk-worker
    spec:
      containers:
      - name: chunk-worker
        image: trieve/chunk-worker
