pdf2md/k8s/api.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: pdf2md-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app.kubernetes.io/name: pdf2md-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf2md-api
  labels:
    app.kubernetes.io/name: pdf2md-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: pdf2md-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pdf2md-api
    spec:
      containers:
      - name: pdf2md-api
        image: trieve/pdf2md-server
        ports:
        - containerPort: 8081
